--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@tanstack/react-query": "^5.28.4",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
